--- a/exercises/bounty-hunter/package.json
+++ b/exercises/bounty-hunter/package.json
@@ -14,6 +14,8 @@
     "cors": "^2.8.4",
     "dotenv": "^4.0.0",
     "express": "^4.16.2",
+    "mongoose": "^5.0.2",
+    "redux-thunk": "^2.2.0",
     "uuid": "^3.2.1"
   }
 }
