--- a/exercises/bounty-hunter/client/package.json
+++ b/exercises/bounty-hunter/client/package.json
@@ -11,6 +11,7 @@
     "react-scripts": "1.1.0",
     "redux": "^3.7.2"
   },
+  "proxy": "http://localhost:5040/",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
